--- a/core/libft_backup/Makefile
+++ b/core/libft_backup/Makefile
@@ -1,30 +1,24 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
+#    makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: jteoh <jteoh@student.42kl.edu.my>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/04 10:34:49 by jteoh             #+#    #+#              #
-#    Updated: 2022/07/04 10:36:04 by jteoh            ###   ########.fr        #
+#    Updated: 2022/07/05 17:28:37 by jteoh            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-FUNC	= ft_isalnum.c ft_isprint.c ft_memcmp.c  ft_putchar_fd.c ft_split.c \
-			ft_strlcat.c ft_strncmp.c ft_substr.c ft_atoi.c ft_isalpha.c \
-			ft_itoa.c ft_memcpy.c  ft_putendl_fd.c ft_strchr.c  ft_strlcpy.c \
-			ft_strnstr.c ft_tolower.c ft_bzero.c   ft_isascii.c ft_memccpy.c \
-			ft_memmove.c ft_putnbr_fd.c  ft_strdup.c  ft_strlen.c  ft_strrchr.c \
-			ft_toupper.c ft_calloc.c  ft_isdigit.c ft_memchr.c  ft_memset.c  \
-			ft_putstr_fd.c  ft_strjoin.c ft_strmapi.c ft_strtrim.c
+FUNC	= ft_isalnum.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c \
+			ft_isalpha.c ft_strncmp.c ft_memchr.c \
+			ft_memcpy.c ft_memcmp.c \
+			ft_bzero.c ft_isascii.c \
+			ft_memmove.c ft_strlen.c \
+			ft_isdigit.c ft_memset.c ft_isprint.c \
 
-OBJS	= $(FUNC:.c=.0)
+OBJS	= $(FUNC:.c=.o)
 
-BONUS	= ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c \
-			ft_lstdelone.c ft_lstiter.c ft_lstlast.c \
-			ft_lstmap.c ft_lstnew.c ft_lstsize.c
-
-BONUS_OBJS	= $(BONUS:.c=.o)
 
 CC		= gcc
 RM		= rm -f
@@ -32,23 +26,16 @@ CFLAGS	= -Wall -Wextra -Werror -I.
 
 NAME	= libft.a
 
-all:
-	$(NAME)
+all:	${NAME}
 
-$(NAME):
-	$(OBJS)
-	ar rcs $(NAME) $(OBJS)
+$(NAME): $(OBJS)
+	@ar rcs $(NAME) $(OBJS)
 
 clean:
-	$(RM) $(OBJS) $(BONUS_OBJS)
+	@$(RM) $(OBJS) $(BONUS_OBJS)
 
-fclean:
-	clean
-	$(RM) $(NAME)
+fclean:	clean
+	@$(RM) $(NAME)
 
-re:
-	fclean $(NAME)
+re:	fclean $(NAME)
 
-bonus:
-	$(OBJS) $(BONUS_OBJS)
-	ar rcs $(NAME) $(OBJS) $(BONUS_OBJS)
