fixed previous flaws, started on part 2, split....

--- a/core/libft_backup/Makefile
+++ b/core/libft_backup/Makefile
@@ -1,21 +1,21 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: jteoh <jteoh@student.42kl.edu.my>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/04 10:34:49 by jteoh             #+#    #+#              #
-#    Updated: 2022/07/06 14:57:21 by jteoh            ###   ########.fr        #
+#    Updated: 2022/07/07 15:00:24 by jteoh            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 FUNC	= ft_isalnum.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c \
 			ft_isalpha.c ft_strncmp.c ft_memchr.c ft_strnstr.c ft_calloc.c \
 			ft_memcpy.c ft_memcmp.c ft_atoi.c ft_strlcpy.c ft_strlcat.c \
-			ft_bzero.c ft_isascii.c \
-			ft_memmove.c ft_strlen.c \
-			ft_isdigit.c ft_memset.c ft_isprint.c \
+			ft_bzero.c ft_isascii.c ft_strdup.c ft_memmove.c ft_strlen.c \
+			ft_isdigit.c ft_memset.c ft_isprint.c ft_substr.c ft_strjoin.c \
+			ft_strtrim.c ft_split.c \
 
 OBJS	= $(FUNC:.c=.o)
 
