--- a/core/ft_printf_backup/Makefile
+++ b/core/ft_printf_backup/Makefile
@@ -6,12 +6,12 @@
 #    By: jteoh <jteoh@student.42kl.edu.my>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/08/09 16:35:10 by jteoh             #+#    #+#              #
-#    Updated: 2022/12/01 15:55:49 by jteoh            ###   ########.fr        #
+#    Updated: 2022/12/09 13:22:00 by jteoh            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRC		= ft_printf.c ft_create.c ft_create2.c ft_create3.c \
-			ft_width_flags.c ft_extract.c ft_findspc.c \
+			ft_width_flags.c ft_extract.c ft_findspc.c ft_scuffed_realloc.c\
 
 OBJS		= $(SRC:.c=.o)
 
