--- a/core/push_swap_backup/Makefile
+++ b/core/push_swap_backup/Makefile
@@ -2,6 +2,8 @@ SRC			= push_swap.c detection.c modify_atoi.c utils.c \
 				sort.c small_sort.c \
 				swap.c push.c rotate.c reverse.c \
 
+BNS			= checker.c \
+
 CC			= gcc
 RM			= rm -f
 CFLAGS		= -Wall -Wextra -Werror -I.
@@ -9,6 +11,8 @@ FSANITIZE	= -fsanitize=address -g
 DSYM		= rm -rf *.dSYM
 
 LIBFT		= libft.a
+GNL			= gnl/*.c
+BONUS		= checker
 NAME		= push_swap
 
 all:	${NAME}
@@ -20,14 +24,17 @@ ${LIBFT}:
 	make all -C libft/
 	mv libft/libft.a .
 
+bonus: ${NAME} ${BNS}
+	${CC} ${CFLAGS} ${FSANITIZE} ${BNS} ${SRC} ${LIBFT} -o ${BONUS} && ${DSYM}
+
 clean:
 	${RM} *.o
 	make clean -C libft/
 
 fclean: clean
-	${RM} $(NAME) ${LIBFT}
+	${RM} $(NAME) &{BONUS} ${LIBFT}
 	make fclean -C libft/
 
-re:	fclean all
+re:	fclean all bonus
 
-.PHONY: all
+.PHONY: all bonus
