--- a/core/push_swap_backup/Makefile
+++ b/core/push_swap_backup/Makefile
@@ -2,7 +2,7 @@ SRC			= push_swap.c detection.c modify_atoi.c utils.c \
 				sort.c small_sort.c \
 				swap.c push.c rotate.c reverse.c \
 
-BNS			= checker.c \
+BNS			= bonus/*.c \
 
 CC			= gcc
 RM			= rm -f
@@ -11,7 +11,7 @@ FSANITIZE	= -fsanitize=address -g
 DSYM		= rm -rf *.dSYM
 
 LIBFT		= libft.a
-GNL			= gnl/*.c
+GNL			= bonus/gnl/*.c
 BONUS		= checker
 NAME		= push_swap
 
@@ -24,15 +24,15 @@ ${LIBFT}:
 	make all -C libft/
 	mv libft/libft.a .
 
-bonus: ${NAME} ${BNS}
-	${CC} ${CFLAGS} ${FSANITIZE} ${BNS} ${SRC} ${LIBFT} -o ${BONUS} && ${DSYM}
+bonus: ${BNS}
+	${CC} ${CFLAGS} ${FSANITIZE} ${BNS} ${GNL} ${LIBFT} -o ${BONUS} && ${DSYM}
 
 clean:
 	${RM} *.o
 	make clean -C libft/
 
 fclean: clean
-	${RM} $(NAME) &{BONUS} ${LIBFT}
+	${RM} $(NAME) ${BONUS} ${LIBFT}
 	make fclean -C libft/
 
 re:	fclean all bonus
