--- a/core/inception_backup/docker_compose.yml
+++ b/core/inception_backup/docker_compose.yml
@@ -17,7 +17,7 @@ services:
     volumes:
       - /data/html:/var/www/html
     depends_on:
-      - mysql
+      - mariadb
     environment:
       WORDPRESS_DB_HOST: mysql
       MYSQL_ROOT_PASSWORD: password
@@ -25,8 +25,6 @@ services:
       WORDPRESS_DB_USER: user
       WORDPRESS_DB_PASSWORD: password
       WORDPRESS_TABLE_PREFIX: wp_
-    links:
-      - mysql
     restart: on-failure
   nginx:
     container_name: nginx
@@ -34,9 +32,7 @@ services:
     volumes:
       - /data/html:/var/www/html
     ports:
-      - 8080:80
-    links:
-      - wordpress
+      - 8000:80
     restart: on-failure
 volumes:
   mariadb:
