--- a/core/inception_backup/mariadb/Dockerfile
+++ b/core/inception_backup/mariadb/Dockerfile
@@ -1,10 +1,16 @@
 FROM debian:11
-RUN apt-get -y update && apt-get install -y mariadb-server
-RUN mkdir -p /run/mariadb/mysqld
-RUN chown -R mysql:root /run/mariadb/mysqld
-LABEL version="1.0"
-LABEL description="MariaDB Server"
-HEALTHCHECK --start-period=5m \
-  CMD mariadb -e 'SELECT @@datadir;' || exit 1
+RUN apt-get update && apt-get upgrade -y
+RUN apt-get install -y mariadb-server
 
-CMD ["mariadbd"]
+COPY ./conf/mdb-conf.sh /mdb-conf.sh
+RUN chmod +x /mdb-conf.sh
+
+EXPOSE 3306
+ENTRYPOINT ["./mdb-conf.sh"]
+
+# LABEL version="1.0"
+# LABEL description="MariaDB Server"
+# HEALTHCHECK --start-period=5m \
+#  CMD mariadb -e 'SELECT @@datadir;' || exit 1
+
+# CMD ["mariadbd"]
