--- a/core/inception_backup/srcs/docker_compose.yml
+++ b/core/inception_backup/srcs/docker_compose.yml
@@ -3,7 +3,7 @@ services:
   mariadb:
     image: mariadb:user
     container_name: mariadb
-    build: ./mariadb/
+    build: ./requirements/mariadb/
     volumes:
       - mariadb:/var/lib/mysql
     # ports:
@@ -17,7 +17,7 @@ services:
   wordpress:
     image: wordpress:user
     container_name: wordpress
-    build: ./wordpress/
+    build: ./requirements/wordpress/
     volumes:
       - wordpress:/var/www/wordpress
     ports:
@@ -33,7 +33,7 @@ services:
   nginx:
     image: nginx:user
     container_name: nginx
-    build: ./nginx/
+    build: ./requirements/nginx/
     volumes:
       - wordpress:/var/www/wordpress
     ports:
