--- a/core/inception_backup/srcs/requirements/nginx/conf/nginx.conf
+++ b/core/inception_backup/srcs/requirements/nginx/conf/nginx.conf
@@ -2,10 +2,11 @@
 events{
 }
 
-http{
+http {
 	include /etc/nginx/mime.types;
-	server{
-		listen 443 ssl;
+	server {
+		listen 443 ssl default_server;
+		listen [::]:443 ssl default_server;
 
 		ssl_certificate /etc/nginx/ssl/inception.crt;
 		ssl_certificate_key /etc/nginx/ssl/inception.key;
