--- a/core/inception_backup/srcs/requirements/nginx/conf/nginx.conf
+++ b/core/inception_backup/srcs/requirements/nginx/conf/nginx.conf
@@ -5,6 +5,12 @@ events{
 http {
 	include /etc/nginx/mime.types;
 	server {
+		listen 80 default_server;
+		listen [::]:80 default_server;
+		server_name $DOMAIN_NAME;
+		return 301 https://jteoh.42.fr$request_uri;
+	}
+	server {
 		listen 443 ssl default_server;
 		listen [::]:443 ssl default_server;
 
