cpp06 and inception done

--- a/core/cpp/cpp06/ex02/Makefile
+++ b/core/cpp/cpp06/ex02/Makefile
@@ -1,6 +1,6 @@
-SRC = main.cpp ScalarConverter.cpp\
+SRC = main.cpp Identify.cpp\
 
-NAME = Convert
+NAME = Identify
 
 ${NAME}: ${SRC}
 	g++ -Wall -Wextra -Werror -std=c++98 ${SRC} -o ${NAME}
